2007-05-17  Simon Budig  <simon@gimp.org>

	* plug-ins/common/tiff-save.c: save the paths in the TIFF.
	Please test interoperability with other programs.

	* plug-ins/common/tiff-load.c: fix coordinate reading for
	negative coordinates.

	* app/config/gimpguiconfig.c: Show color swatches by default.

2007-05-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpthumbbox.c
	* libgimp/gimpprogressbar.c
	* plug-ins/script-fu/script-fu-interface.c: use Gtk functions to
	manually iterate the main loop because they release the Gdk lock
	correctly around calling the GLib main loop functions.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	readded (better) code to deal with full menu paths.

2007-05-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpbrushtool.c (gimp_brush_tool_constructor): add a
	local GimpDisplayConfig variable to improve readability.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mblur.c: applied patch from Jörg Gittinger that
	improves the quality of the Motion Blur filter (bug #380435).

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c (script_fu_interface):
	removed code that used to deal with full menu paths. All our
	scripts use script-fu-menu-register now.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm
	* plug-ins/script-fu/scripts/copy-visible.scm: unmarked strings for
	translation.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (tile_invalidate): if the invalidated
	tile is the cached tile, release the cached tile. Fixes bug #438802.

2007-05-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfiledialog.c (gimp_file_dialog_set_sensitive):
	apply sensitivity state to the Cancel button as well.
	(gimp_file_dialog_progress_start): make the Cancel button sensitive
	if the progress is cancelable.
